# _examples/uuidcheck/api/googleuuid/v1/googleuuid.pb.gw.go
@@ -187,6 +187,32 @@ func local_request_GoogleuuidService_CreateUserReturnPartial_0(ctx context.Conte
 
 }
 
+func request_GoogleuuidService_GetProductsByIds_0(ctx context.Context, marshaler runtime.Marshaler, client GoogleuuidServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetProductsByIdsRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq.Dollar_1); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.GetProductsByIds(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_GoogleuuidService_GetProductsByIds_0(ctx context.Context, marshaler runtime.Marshaler, server GoogleuuidServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetProductsByIdsRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq.Dollar_1); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.GetProductsByIds(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterGoogleuuidServiceHandlerServer registers the http handlers for service GoogleuuidService to "mux".
 // UnaryRPC     :call GoogleuuidServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -341,6 +367,31 @@ func RegisterGoogleuuidServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		}
 
 		forward_GoogleuuidService_CreateUserReturnPartial_0(annotatedContext, mux, outboundMarshaler, w, req, response_GoogleuuidService_CreateUserReturnPartial_0{resp.(*CreateUserReturnPartialResponse)}, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_GoogleuuidService_GetProductsByIds_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/googleuuid.v1.GoogleuuidService/GetProductsByIds", runtime.WithHTTPPathPattern("/products-by-ids"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_GoogleuuidService_GetProductsByIds_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_GoogleuuidService_GetProductsByIds_0(annotatedContext, mux, outboundMarshaler, w, req, response_GoogleuuidService_GetProductsByIds_0{resp.(*GetProductsByIdsResponse)}, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -517,6 +568,28 @@ func RegisterGoogleuuidServiceHandlerClient(ctx context.Context, mux *runtime.Se
 
 	})
 
+	mux.Handle("POST", pattern_GoogleuuidService_GetProductsByIds_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/googleuuid.v1.GoogleuuidService/GetProductsByIds", runtime.WithHTTPPathPattern("/products-by-ids"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_GoogleuuidService_GetProductsByIds_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_GoogleuuidService_GetProductsByIds_0(annotatedContext, mux, outboundMarshaler, w, req, response_GoogleuuidService_GetProductsByIds_0{resp.(*GetProductsByIdsResponse)}, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -552,6 +625,14 @@ func (m response_GoogleuuidService_CreateUserReturnPartial_0) XXX_ResponseBody()
 	return m.CreateUserReturnPartialRow
 }
 
+type response_GoogleuuidService_GetProductsByIds_0 struct {
+	*GetProductsByIdsResponse
+}
+
+func (m response_GoogleuuidService_GetProductsByIds_0) XXX_ResponseBody() interface{} {
+	return m.List
+}
+
 var (
 	pattern_GoogleuuidService_CreateProduct_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"product"}, ""))
 
@@ -564,6 +645,8 @@ var (
 	pattern_GoogleuuidService_CreateUserReturnAll_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"user-return-all"}, ""))
 
 	pattern_GoogleuuidService_CreateUserReturnPartial_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"user-return-partial"}, ""))
+
+	pattern_GoogleuuidService_GetProductsByIds_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"products-by-ids"}, ""))
 )
 
 var (
@@ -578,4 +661,6 @@ var (
 	forward_GoogleuuidService_CreateUserReturnAll_0 = runtime.ForwardResponseMessage
 
 	forward_GoogleuuidService_CreateUserReturnPartial_0 = runtime.ForwardResponseMessage
+
+	forward_GoogleuuidService_GetProductsByIds_0 = runtime.ForwardResponseMessage
 )
